opam-version: "2.0"
name: "mvl"
version: "0.1"
synopsis: "Multivalued logic systems."
maintainer: "Matthew Kukla <matt.kukla@yandex.ru>"
authors: "Matthew Kukla <matt.kukla@yandex.ru>"
bug-reports: "Matthew Kukla <matt.kukla@yandex.ru>"
license: "GPL-3.0"
homepage: "https://mkukla.net/doc/mvl/"
depends: ["ocaml" "ocamlbuild"]
build: [["dune" "build" "-p" name "-j" jobs "@install" ]]
